--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=ThinkSpeak
+name=ThingSpeak
 version=1.0.0
 author=Metod Medja <metod@openlab.si>
 maintainer=Metod Medja <metod@openlab.si>
 sentence=Library for easy communication with ThingSpeak servers
 paragraph=Lets you update Channels and execute TalkBack commands
 category=Communication
-url=https://github.com/OpenLab-SI/ThinkSpeak-Arduino
+url=https://github.com/OpenLab-SI/ThingSpeak-Arduino
 architectures=*
 includes=SPI.h,Ethernet.h,ThingSpeak.h
